# LookingGlass

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  argocd-application.yaml  docker-compose.yml  image-annotator-tampermonkey.user.js  image_annotator_content_script.js  lookingglass.service  main.py  package-firefox-extension.sh  pyproject.toml  settings.py  start-lookingglass.sh  test.txt
.github/workflows/: build-docker-images.yml  build-firefox-extension.yml  build-image.yml  build-tampermonkey.yml  ci-tests.yml  semantic-versioning.yml
app/: __init__.py  auth_routes.py  cache.py  common.py  config.py  container.py  dependencies.py  gemma_ocr_client.py  glm_ocr_client.py  image_processing.py  prompts.py  routes.py  schema.py  settings.py  translation.py
app/auth/: __init__.py  access_code.py  dependencies.py  oauth2.py  store.py  store_redis.py
app/providers/: __init__.py  base.py  gemma_provider.py  registry.py  (+2 more)
docs/: GLM_OCR.md  GLM_OCR_FIXES.md  GLM_OCR_QUICKSTART.md  TILING.md  architecture.md
image-annotator-chrome-extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
image-annotator-firefox-extension/: README.md  background.js  content.js  image-annotator-tampermonkey.user.js  manifest.json  options.html  options.js  popup.html  popup.js
prompts/: README.md  label_detection.md  translation_batch.md  translation_single.md
tampermonkey-extension/: README.md  esbuild.config.js  package-lock.json  package.json  tsconfig.json
tests/: conftest.py  test_api.py  test_auth.py  test_cache.py  test_common.py  test_config.py  test_dependencies.py  test_gemma_ocr.py  test_image_processing.py  test_providers.py  test_schema.py  test_translation.py
(+45 files in other folders)
