[project]
name = "looking-glass"
version = "0.1.0"
description = "OCR + translation with llms"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.4",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.9.1",
    "pydantic-settings>=2.11.0",
    "pytesseract>=0.3.13",
    "pytest>=8.4.2",
]
