[project]
name = "looking-glass"
version = "1.0.0"
description = "OCR + translation with llms"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.4",
    "uvicorn>=0.30.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.9.1",
    "pydantic-settings>=2.11.0",
    "pytesseract>=0.3.13",
    "pytest>=8.4.2",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.4.0",
    "jinja2>=3.1.6",
    "redis>=5.0.0",  # Redis client for persistent access code storage
    "itsdangerous>=2.2.0",
    "glmocr[layout,selfhosted]>=0.1.0",  # Official GLM-OCR SDK for vLLM/SGLang deployment
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.3.1",
]
